--- a/temp.html
+++ b/temp.html
@@ -3,24 +3,18 @@
 <!doctype html>
 <html>
 <head>
-<title>WEB1 - CSS</title>
+<title>WEB1 - JavaScript</title>
 <!-- 한글이 깨진다면 <meta charset="utf-8">을 추가해보세요. -->
 <meta charset="utf-8">
 </head>
-
-
 <body>
 <!-- <ul>, <li> 부모, 자식태그임, <li> : listing 태그 -->
   <h1><a href="index.html">WEB</a></h1>
-  <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
-  </ol>
-  <h2>CSS</h2> <!-- <h1>-<h6> : 제목1 - 제목6-->
+
+  <h2>수미씨</h2> <!-- <h1>-<h6> : 제목1 - 제목6-->
     <!-- <a> : 다른 주소로 link -->
   <p>
-    what is the css?
+    <h4><u>애들 소개시켜줘</u></h4>
   </p>
 </body>
 </html>
