--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <li><a href="1.html">HTML</a></li>
     <li><a href="2.html">CSS</a></li>
     <li><a href="3.html">JavaScript</a></li>
+    <li><a href="temp.html">임수미</a></li>
   </ol>
   <h2>WEB</h2> <!-- <h1>-<h6> : 제목1 - 제목6-->
     <!-- <a> : 다른 주소로 link -->
